--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:LvRydwS6tMWJo3wKj2PR9K26ebMzpP8mN11Bi8HZj5w=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-
-DEBUGBAR_ENABLED=false
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -22,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_CONNECTION=sqlite
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=laravel
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -65,12 +63,3 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-
-BROADCAST_DRIVER=pusher
-PUSHER_APP_ID=1961824
-PUSHER_APP_KEY=21c4d81f9b4ede4f2367
-PUSHER_APP_SECRET=cb02adb5ebb38ed8adfb
-PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=http
-PUSHER_APP_CLUSTER=ap1
